Bootsrap, Bootswatch United theme.
Fix Navigation bar to work with bootsrap4 and bootswatch 4

--- a/src/app/Register/Register.component.html
+++ b/src/app/Register/Register.component.html
@@ -1,4 +1,6 @@
 <ng-container>
+  <div class="container-fluid ">
+    <div class="col-sm-12 ">
   <form [formGroup]="registerForm">
 
     <h2 class="text-center text primary">Sign Up</h2>
@@ -17,4 +19,6 @@
       <button type="button" class="btn btn-default" (click)=" cancel()">Cancel</button>
     </div>
   </form>
+</div>
+</div>
 </ng-container>
