--- a/src/app/Home/Home.component.html
+++ b/src/app/Home/Home.component.html
@@ -12,8 +12,11 @@
 
 </div>
 
+<br>
 <div *ngIf="showRegister" class="container">
-  <div class="col-md-4 col-md-offset-4">
+  <div class="row">
+  <div class="col-md-4 offset-md-4">
     <app-Register (canceledEvent)=canceledEvent($event)></app-Register>
   </div>
+</div>
 </div>
