--- a/src/app/Home/Home.component.html
+++ b/src/app/Home/Home.component.html
@@ -6,7 +6,7 @@
   <p class="lead">Come on in to view your matches.... All you need to do is sign up</p>
 
   <div class="text-center">
-    <button class="btn btn-primary btn-lg" (click)="registerToggle()">Register</button>
+    <button class="btn btn-primary btn-lg" (click)="registerToggle()" style="margin-right: 15px;">Register</button>
     <button class="btn btn-primary btn-lg">Learn more</button>
   </div>
 
