--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.css';
 @import '~bootswatch/dist/united/bootstrap.css';
-@import '~font-awesome/css/font-awesome.css'
-
+@import '~font-awesome/css/font-awesome.css';
+@import '~angular-notifier/styles/core.css';
+@import '~angular-notifier/styles/themes/theme-material.css';
+@import '~angular-notifier/styles/types/type-info.css';
+@import '~angular-notifier/styles/types/type-success.css';
+@import '~angular-notifier/styles/types/type-warning.css';
+@import '~angular-notifier/styles/types/type-error.css';
