--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-nav></app-nav>
-<app-Home></app-Home>
 
 <notifier-container></notifier-container>
+
+
+<router-outlet></router-outlet>
