--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -9,13 +9,13 @@
     <div id="navbarT" class="navbar-collapse collapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item" >
-          <a class="nav-link"  href="#"> Matches </a>
+          <a class="nav-link" [routerLink]="['/matches']" routerLinkActive="router-link-active"> Matches </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link"  href="#"> List</a>
+          <a [routerLink]="['/lists']" routerLinkActive="router-link-active"  class="nav-link"> List</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link"  href="#"> Messages</a>
+          <a class="nav-link" [routerLink]="['/messages']" routerLinkActive="router-link-active"> Messages</a>
         </li>
       </ul>
       <ng-container *ngIf="!isLoggedIn">
