--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
 <!--The content below is only a placeholder and can be replaced.-->
+
 <app-nav></app-nav>
+<div class='container-fluid'>
 
-<notifier-container></notifier-container>
+  <notifier-container></notifier-container>
 
+  <router-outlet></router-outlet>
 
-<router-outlet></router-outlet>
+</div>
