--- a/src/app/Register/Register.component.html
+++ b/src/app/Register/Register.component.html
@@ -15,8 +15,9 @@
     </div>
 
     <div class="form-group text-center">
-      <button type="button" class="btn btn-success " (click)="register(registerForm.get('userRegister').value)" style="margin-right: 15px;" >Submit</button>
-      <button type="button" class="btn btn-secondary" (click)=" cancel()" style="margin-left: 15px;">Cancel</button>
+      <button type="button" class="btn btn-success " (click)="register(registerForm.get('userRegister').value)"
+       style="margin-right: 15px;" [disabled]='!isFormValid(registerForm)' >Submit</button>
+      <button type="button" class="btn btn-secondary" (click)='cancel()' style="margin-left: 15px;">Cancel</button>
     </div>
   </form>
 </div>
