--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -34,22 +34,22 @@
         </form>
       </ng-container>
       <ng-container *ngIf="isLoggedIn">
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav  navbar-right">
           <li class="nav-item">
-            <a (click)="logOut()">Logout</a>
+            <a class="nav-link" (click)="logOut()">Logout</a>
           </li>
-          <li class="dropdown nav-item">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{welcomeUser}}
+          <li class="dropdown" dropdown>
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" dropdownToggle (click)="false">{{welcomeUser}}
               <span class="caret"></span>
             </a>
-            <ul class="dropdown-menu nav-item">
+            <ul class="dropdown-menu nav-item" *dropdownMenu>
               <li>
-                <a href="#">
-                  <i class="fa fa-user" aria-hidden="true"></i>Edit Profile</a>
+                <a class="dropdown-item" href="#">
+                  <i class="fa fa-user" ></i>Edit Profile</a>
               </li>
-              <li class="nav-item">
-                <a (click)="logOut()">
-                  <i class="fa fa-sign-out" aria-hidden="true"></i>Logout</a>
+              <li >
+                <a class="dropdown-item" (click)="logOut()">
+                  <i class="fa fa-sign-out" ></i>Logout</a>
               </li>
             </ul>
           </li>
