--- a/src/app/Core/nav/nav.component.html
+++ b/src/app/Core/nav/nav.component.html
@@ -9,7 +9,7 @@
     <div id="navbarT" class="navbar-collapse collapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item" >
-          <a class="nav-link" [routerLink]="['/matches']" routerLinkActive="active"> Matches </a>
+          <a class="nav-link" [routerLink]="['/members']" routerLinkActive="active"> Matches </a>
         </li>
         <li class="nav-item">
           <a [routerLink]="['/lists']" routerLinkActive="active"  class="nav-link"> List</a>
