--- a/src/app/user-photos/user-photos.component.html
+++ b/src/app/user-photos/user-photos.component.html
@@ -1,3 +1,26 @@
 <p>
   user-photos works!
 </p>
+
+
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-25" src="https://randomuser.me/api/portraits/men/90.jpg" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-25" src="https://randomuser.me/api/portraits/women/49.jpg" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-25" src="https://randomuser.me/api/portraits/men/90.jpg" alt="Third slide">
+        </div>
+      </div>
+      <a class="carousel-control-prev" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
