--- a/src/app/user-detail-nav-card/user-detail-nav-card.component.html
+++ b/src/app/user-detail-nav-card/user-detail-nav-card.component.html
@@ -35,5 +35,5 @@
   <app-user-messages></app-user-messages>
 </div>
 <div *ngIf='showPhotosDiv'>
-  <app-user-photos></app-user-photos>
+  <app-user-photos [galleryImages]='userDetails.Photos' ></app-user-photos>
 </div>
