Update user profile component and form

--- a/src/app/Core/nav/nav.component.html
+++ b/src/app/Core/nav/nav.component.html
@@ -44,7 +44,7 @@
             </a>
             <ul class="dropdown-menu nav-item" *dropdownMenu>
               <li>
-                <a class="dropdown-item" href="#">
+                <a class="dropdown-item" [routerLink]="['/members', userID ,'edit-profile']">
                   <i class="fa fa-user" ></i>Edit Profile</a>
               </li>
               <li >
