--- a/src/app/Core/nav/nav.component.html
+++ b/src/app/Core/nav/nav.component.html
@@ -36,6 +36,11 @@
       <ng-container *ngIf="isLoggedIn">
         <ul class="navbar-nav  navbar-right">
           <li class="nav-item">
+              <div class="card" style="width: 3rem;">
+                  <img class="card-img-top" [src]="mainPhotoUrl$ | async" alt="Card image cap">
+              </div>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" (click)="logOut()">Logout</a>
           </li>
           <li class="dropdown" dropdown>
