--- a/src/app/Member/member-edit-profile/member-edit-profile.component.html
+++ b/src/app/Member/member-edit-profile/member-edit-profile.component.html
@@ -19,7 +19,7 @@
       </div>
     </div>
     <div class='col-lg-9 col-md-7 col-sm-12 card' *ngIf='UserDetail'>
-      <app-user-edit-profilenav-card *ngIf='UserDetail' [userDetailToEdit]='UserDetail'></app-user-edit-profilenav-card>
+      <app-user-edit-profilenav-card *ngIf='UserDetail' [(userDetailToEdit)]='UserDetail'></app-user-edit-profilenav-card>
     </div>
   </div>
 </div>
