--- a/src/app/Member/member-edit-profile/user-edit-profilenav-card/user-edit-profilenav-card.component.html
+++ b/src/app/Member/member-edit-profile/user-edit-profilenav-card/user-edit-profilenav-card.component.html
@@ -19,6 +19,6 @@
       <app-user-edit-form *ngIf='userDetailToEdit' [UserDetail]='userDetailToEdit'></app-user-edit-form>
     </div>
     <div *ngIf='showEditPhotosDiv'>
-        <app-user-edit-photo [(photos)]='userDetailToEdit.Photos'></app-user-edit-photo>
+        <app-user-edit-photo [(photos)]='userDetailToEdit.Photos'(photosChange)='PhotoChanged($event)'></app-user-edit-photo>
     </div>
 
