--- a/src/app/Register/Register.component.html
+++ b/src/app/Register/Register.component.html
@@ -7,6 +7,24 @@
 
         <hr>
         <div formGroupName="userRegister">
+            <p>I am a</p>
+            <div class="form-group custom-control custom-radio custom-control-inline">
+              <div>
+                <input type="radio" id='male' formControlName="Gender" class="form-control" name="Gender" value="Male" class='custom-control-input'>
+                <label class='custom-control-label' for='male'>Male</label>
+              </div>
+
+              <div class="custom-control custom-radio custom-control-inline">
+                <input type="radio" id='female' formControlName="Gender" class="form-control" name="Gender" value="Female" class='custom-control-input'>
+                <label class='custom-control-label' for='female'>Female</label>
+              </div>
+
+                <!-- Errors -->
+                <div *ngIf='gender.touched && gender.invalid' class="alert alert-danger">
+                  <div *ngIf='gender.errors.required'> This field is required </div>
+                </div>
+              </div>
+
           <div class="form-group">
             <input type="text" formControlName="Username" class="form-control" placeholder="Username">
 
