--- a/src/app/Register/Register.component.html
+++ b/src/app/Register/Register.component.html
@@ -1,102 +1,116 @@
 <ng-container>
-  <div class="container-fluid ">
-    <div class="col-sm-12 ">
-      <form [formGroup]="registerForm">
+    <div class="container-fluid ">
+      <div class="col-sm-12 ">
+        <form [formGroup]="registerForm">
 
-        <h2 class="text-center text primary">Sign Up</h2>
+          <h2 class="text-center text primary">Sign Up</h2>
 
-        <hr>
-        <div formGroupName="userRegister">
-            <p>I am a</p>
-            <div class="form-group custom-control custom-radio custom-control-inline">
-              <div>
-                <input type="radio" id='male' formControlName="Gender" class="form-control" name="Gender" value="Male" class='custom-control-input'>
-                <label class='custom-control-label' for='male'>Male</label>
-              </div>
-
-              <div class="custom-control custom-radio custom-control-inline">
-                <input type="radio" id='female' formControlName="Gender" class="form-control" name="Gender" value="Female" class='custom-control-input'>
-                <label class='custom-control-label' for='female'>Female</label>
-              </div>
-
-                <!-- Errors -->
-                <div *ngIf='gender.touched && gender.invalid' class="alert alert-danger">
-                  <div *ngIf='gender.errors.required'> This field is required </div>
+          <hr>
+          <div formGroupName="userRegister">
+              <p>I am a</p>
+              <div class="form-group custom-control custom-radio custom-control-inline">
+                <div>
+                  <input type="radio" id='male' formControlName="Gender" class="form-control" name="Gender" value="Male" class='custom-control-input'>
+                  <label class='custom-control-label' for='male'>Male</label>
                 </div>
+
+                <div class="custom-control custom-radio custom-control-inline">
+                  <input type="radio" id='female' formControlName="Gender" class="form-control" name="Gender" value="Female" class='custom-control-input'>
+                  <label class='custom-control-label' for='female'>Female</label>
+                </div>
+
+                  <!-- Errors -->
+                  <div *ngIf='gender.touched && gender.invalid' class="alert alert-danger">
+                    <div *ngIf='gender.errors.required'> This field is required </div>
+                  </div>
+                </div>
+
+            <div class="form-group">
+                <label for="usernameInp">Username</label>
+              <input id='usernameInp' type="text" formControlName="Username" class="form-control" placeholder="Username">
+
+              <!-- Errors -->
+              <div *ngIf='username.touched && username.invalid' class="alert alert-danger">
+                <div *ngIf='username.errors.required'> This field is required </div>
+              </div>
+            </div>
+
+            <div class="form-group">
+                <label for="knownasInp">Known As</label>
+              <input id='knownasInp' type="text" formControlName="Knownas" class="form-control" placeholder="Known as">
+
+              <!-- Errors -->
+              <div *ngIf='knownas.touched && knownas.invalid' class="alert alert-danger">
+                <div *ngIf='knownas.errors.required'> This field is required </div>
+              </div>
+            </div>
+
+            <div class="form-group">
+                <label for="knownasInp">Date of Birth</label>
+              <!-- <input type="datetime-local" formControlName="Dateofbirth" class="form-control" placeholder="Date Of Birth"> -->
+              <my-date-picker name="Dateofbirth" [options]="myDatePickerOptions"
+              formControlName="Dateofbirth"></my-date-picker>
+              <!-- Errors -->
+              <div *ngIf='dateofbirth.touched && dateofbirth.invalid' class="alert alert-danger">
+                <div *ngIf='dateofbirth.errors.required'> This field is required </div>
+              </div>
+            </div>
+
+            <div class="form-group">
+                <label for="City">Known As</label>
+              <input type="text" formControlName="City" class="form-control" placeholder="City">
+
+              <!-- Errors -->
+              <div *ngIf='city.touched && city.invalid' class="alert alert-danger">
+                <div *ngIf='city.errors.required'> This field is required </div>
+              </div>
+            </div>
+
+            <div class="form-group">
+                <label for="knownasInp">Country</label>
+              <input type="text" formControlName="Country" class="form-control" placeholder="Country">
+
+              <!-- Errors -->
+              <div *ngIf='country.touched && country.invalid' class="alert alert-danger">
+                <div *ngIf='country.errors.required'> This field is required </div>
+              </div>
+            </div>
+
+
+            <div class="form-group">
+                <label for="knownasInp">Password</label>
+              <input type="text" formControlName="Password" class="form-control" placeholder="Password">
+
+              <!-- Errors -->
+              <div *ngIf='password.touched && password.invalid' class="alert alert-danger">
+                <div *ngIf='password.errors.required'> This field is required </div>
+              </div>
+            </div>
+
+            <div class="form-group">
+                <label for="knownasInp">ConfirmPassword</label>
+              <input type="text" formControlName="ConfirmPassword" class="form-control" placeholder="Confirm Password">
+
+              <!-- Errors -->
+              <div *ngIf='confirmedPassword.touched && confirmedPassword.invalid' class="alert alert-danger">
+                <div *ngIf='confirmedPassword.errors.required'> This field is required </div>
               </div>
 
-          <div class="form-group">
-            <input type="text" formControlName="Username" class="form-control" placeholder="Username">
+              <!-- Errors -->
+              <div *ngIf='confirmedPassword.valid && password.valid && userregister.invalid' class="alert alert-danger">
+                <div *ngIf='userregister.errors.MatchPasswordError'>{{userregister.errors['MatchPasswordError']}}</div>
+                <!-- <div *ngIf="userregister.hasError('MatchPasswordError')"></div> -->
+              </div>
 
-            <!-- Errors -->
-            <div *ngIf='username.touched && username.invalid' class="alert alert-danger">
-              <div *ngIf='username.errors.required'> This field is required </div>
             </div>
           </div>
 
-          <div class="form-group">
-            <input type="text" formControlName="Knownas" class="form-control" placeholder="Known as">
-
-            <!-- Errors -->
-            <div *ngIf='knownas.touched && knownas.invalid' class="alert alert-danger">
-              <div *ngIf='knownas.errors.required'> This field is required </div>
-            </div>
+          <div class="form-group text-center">
+            <button type="button" class="btn btn-success " (click)="register(registerForm.get('userRegister').value)"
+              style="margin-right: 15px;" [disabled]='!isFormValid(registerForm)'>Submit</button>
+            <button type="button" class="btn btn-secondary" (click)='cancel()' style="margin-left: 15px;">Cancel</button>
           </div>
-
-          <div class="form-group">
-            <!-- <input type="datetime-local" formControlName="Dateofbirth" class="form-control" placeholder="Date Of Birth"> -->
-            <my-date-picker name="Dateofbirth" [options]="myDatePickerOptions"
-            formControlName="Dateofbirth"></my-date-picker>
-            <!-- Errors -->
-            <div *ngIf='dateofbirth.touched && dateofbirth.invalid' class="alert alert-danger">
-              <div *ngIf='dateofbirth.errors.required'> This field is required </div>
-            </div>
-          </div>
-
-          <div class="form-group">
-            <input type="text" formControlName="City" class="form-control" placeholder="City">
-
-            <!-- Errors -->
-            <div *ngIf='city.touched && city.invalid' class="alert alert-danger">
-              <div *ngIf='city.errors.required'> This field is required </div>
-            </div>
-          </div>
-
-          <div class="form-group">
-            <input type="text" formControlName="Country" class="form-control" placeholder="Country">
-
-            <!-- Errors -->
-            <div *ngIf='country.touched && country.invalid' class="alert alert-danger">
-              <div *ngIf='country.errors.required'> This field is required </div>
-            </div>
-          </div>
-
-
-          <div class="form-group">
-            <input type="text" formControlName="Password" class="form-control" placeholder="Password">
-
-            <!-- Errors -->
-            <div *ngIf='password.touched && password.invalid' class="alert alert-danger">
-              <div *ngIf='password.errors.required'> This field is required </div>
-            </div>
-          </div>
-
-          <div class="form-group">
-            <input type="text" formControlName="ConfirmPassword" class="form-control" placeholder="Confirm Password">
-
-            <!-- Errors -->
-            <div *ngIf='confirmedPassword.touched && confirmedPassword.invalid' class="alert alert-danger">
-              <div *ngIf='confirmedPassword.errors.required'> This field is required </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="form-group text-center">
-          <button type="button" class="btn btn-success " (click)="register(registerForm.get('userRegister').value)"
-            style="margin-right: 15px;" [disabled]='!isFormValid(registerForm)'>Submit</button>
-          <button type="button" class="btn btn-secondary" (click)='cancel()' style="margin-left: 15px;">Cancel</button>
-        </div>
-      </form>
+        </form>
+      </div>
     </div>
-  </div>
-</ng-container>
+  </ng-container>
