--- a/src/app/Member/member-detail/member-detail.component.html
+++ b/src/app/Member/member-detail/member-detail.component.html
@@ -9,9 +9,9 @@
           <h5><strong>Age:</strong></h5>
           <p class="card-text">{{UserDetail.Age}}</p>
           <h5><strong>Last Active:</strong></h5>
-          <p class="card-text">{{UserDetail.LastActive}}</p>
+          <p class="card-text">{{UserDetail.LastActive }}</p>
           <h5><strong>Member Since:</strong></h5>
-          <p class="card-text">{{UserDetail.CreatedAt}}</p>
+          <p class="card-text">{{UserDetail.CreatedAt | date: 'mediumDate'}}</p>
           <div class='row'>
             <div>
               <button type="button" class="btn btn-primary btnlike text-center">Like</button>
