--- a/src/app/Member/member-list/member-list.component.html
+++ b/src/app/Member/member-list/member-list.component.html
@@ -2,6 +2,32 @@
   <app-spinner></app-spinner>
 </div>
 
+
+<div class="text-center mt-3" *ngIf='paginationInfo && paginationInfo!== null'>
+  <h2>Your matches - {{paginationInfo.totalItems}} found</h2>
+</div>
+
+<form class="form-inline" novalidate [formGroup]= 'filterForm'>
+  <div class="form-group">
+    <label for="minAge">Age From</label>
+    <input type="number" formControlName='ageFrom' value={{minAge.value}}  class="form-control ml-1" style="width: 70px" id="minAge" name="minAge">
+  </div>
+
+  <div class="form-group px-2">
+    <label for="maxAge">Age To</label>
+    <input type="number" formControlName='ageTo' value='{{maxAge.value}}' class="form-control ml-1" style="width: 70px" id="maxAge" >
+  </div>
+
+  <div class="form-group" >
+    <label for="imageurl">Gender </label>
+    <ng-select style='width: 150px' id='gender' formControlName="gender" [allowClear]="true" [noFilter]="infinity" [options]="genderOption"> </ng-select>
+  </div>
+  <button type="submit" class="btn btn-primary" style="margin-left:10px" (click)='ApplyFilter(filterForm.value)' [disabled]='isValid(filterForm)'>Apply Filters</button>
+  <button type="button" class="btn btn-info" style="margin-left:10px" (click)='ResetFilter()' [disabled]='isValid(filterForm)'>Reset Filter </button>
+
+</form>
+<br>
+
 <div *ngIf='Users && Users.length > 0' >
     <app-member-card [userModel]=Users ></app-member-card>
 
