--- a/src/app/Register/Register.component.html
+++ b/src/app/Register/Register.component.html
@@ -57,7 +57,7 @@
             </div>
 
             <div class="form-group">
-                <label for="City">Known As</label>
+                <label for="City">City</label>
               <input type="text" formControlName="City" class="form-control" placeholder="City">
 
               <!-- Errors -->
@@ -79,7 +79,7 @@
 
             <div class="form-group">
                 <label for="knownasInp">Password</label>
-              <input type="text" formControlName="Password" class="form-control" placeholder="Password">
+              <input type="password" formControlName="Password" class="form-control" placeholder="Password">
 
               <!-- Errors -->
               <div *ngIf='password.touched && password.invalid' class="alert alert-danger">
@@ -89,7 +89,7 @@
 
             <div class="form-group">
                 <label for="knownasInp">ConfirmPassword</label>
-              <input type="text" formControlName="ConfirmPassword" class="form-control" placeholder="Confirm Password">
+              <input type="password" formControlName="ConfirmPassword" class="form-control" placeholder="Confirm Password">
 
               <!-- Errors -->
               <div *ngIf='confirmedPassword.touched && confirmedPassword.invalid' class="alert alert-danger">
